Code quality changes